@@ -294,6 +294,7 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA 900PD  (EXPERIMENTAL)
        Canon PIXMA 950i   (EXPERIMENTAL)
        Canon PIXMA 960i   (EXPERIMENTAL)
+       Canon PIXMA 990i   (EXPERIMENTAL)
        Canon PIXMA 6100i  (EXPERIMENTAL)
        Canon PIXMA 6500i  (EXPERIMENTAL)
        Canon PIXMA 9100i  (EXPERIMENTAL)
@@ -313,6 +314,7 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA i950   (EXPERIMENTAL)
        Canon PIXMA i960   (EXPERIMENTAL)
        Canon PIXMA i965   (EXPERIMENTAL)
+       Canon PIXMA i990   (EXPERIMENTAL)
        Canon PIXMA i6100  (EXPERIMENTAL)
        Canon PIXMA i6500  (EXPERIMENTAL)
        Canon PIXMA i9100  (EXPERIMENTAL)
